apps/fraud-detection/fraud-detection.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fraud-detection
  labels:
    app: fraud-detection
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fraud-detection      
  template:
    metadata:
      labels:
        app: fraud-detection        
    spec:
      containers:
        - name: fraud-detection
          image: "docker.io/burrsutter/hello:1.0.0"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
