apps/fraud-detection/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fraud-detection
  labels:    
    app: fraud-detection
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: fraud-detection
